# opencv-zmq-cpp2py

./: CMakeLists.txt  README.md
cpp/: CMakeLists.txt
cpp/src/: main.cpp  pub.cpp
py/: sub.py
src/: main.cpp
